# Folder-Structure-Tool

./: LICENSE  README.md  pyproject.toml
structtool/: __init__.py  cli.py  constants.py
structtool/commands/: __init__.py  history.py  list.py  load.py  remove.py  save.py  search.py
structtool/helpers/: __init__.py  get_latest_version_file.py  get_metadata_file.py  get_next_version.py  get_structure_dir.py  index.py  should_ignore.py  update_metadata.py
structtool/utils/: __init__.py  file_formats.py  index.py  init.py  metadata.py  tree.py  versioning.py
