[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "structtool"
version = "1.0.0"
description = "Save and recreate folder structures"
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
savestruct = "structtool.cli:savestruct_main"
loadstruct = "structtool.cli:loadstruct_main"