[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "structtool"
version = "2.0.0"
description = "Save and recreate folder structures"
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
structtool = "structtool.cli:main"
strt = "structtool.cli:main"

[tool.setuptools.packages.find]
where = ["."]